--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#service">Services</a></li>
                 <li><a href="#ride">Our Past</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="SignUp.html">Sign Up</a></li>
+                <li><a href="signUp.html">Sign Up</a></li>
                 <li><a href="login.html">Sign In</a></li>
                 <li><img src="img/user.png" width="40px" height="25px" alt="Profile"></li>
                 <!-- Add Theme Toggle -->
